tree-sitter-hs2/grammar.js
    module: $ => choice(
      seq(
        repeat($.language_pragma),
        'module',
        choice($.qualified_module_identifier, $.module_identifier),
        optional(choice($.warning_pragma, $.deprecated_pragma)),
        optional($.module_exports),
        alias($._top_where, $.where)
      ),
      seq(
        repeat($.language_pragma),
        repeat(seq($._top_declaration, choice(';', $._layout_semicolon)))
      )
    ),

    _declarations: $ => choice(
      seq(
        '{',
        repeat(seq($._declaration, optional($._terminal))),
        '}'
      ),
      seq(
        $._layout_open_brace,
        repeat(seq($._declaration, choice($._terminal, $._layout_semicolon))),
        $._layout_close_brace
      )
    ),

    _top_declaration: $ => choice(
      $.import_declaration,
      $.qualified_import_declaration,
      $.type_synonym_declaration,
      $.algebraic_datatype_declaration,
      $.newtype_declaration,
      $.type_class_declaration,
      $.type_class_instance_declaration,
      $.default_declaration,
      $.foreign_import_declaration,
      $.foreign_export_declaration,
      $.standalone_deriving_declaration,
      $._declaration
    ),

    _top_where: $ => seq(
      'where',
      $._top_declarations
    ),

    where: $ => seq(
      'where',
      $._declarations
    ),

    type_class_instance_declaration: $ => seq(
      'instance',
      optional(choice(
        $.overlaps_pragma,
        $.overlapping_pragma,
        $.overlappable_pragma,
        $.incoherent_pragma
      )),
      optional($.scontext),
      choice($.qualified_type_class_identifier, $.type_class_identifier),
      optional($.instance),
      $.where
    ),

    instance: $ => repeat1($._type_pattern),

    type_signature: $ => seq(
      sep1(',', $._variable),
      alias('::', $.annotation),
      optional($.context),
      optional($.scoped_type_variables),
      $._type_pattern
    ),

    _type_pattern: $ => prec.left(choice(
      $._type,
      $.function_type,
      $.infix_type_operator_application
    )),

    _type: $ => prec.left(repeat1($._atype)),

    function_type: $ => prec.right(seq(
      alias($._type, $.type),
      '->',
      choice(alias($._type, $.type), $.function_type)
    )),

    _atype: $ => choice(
      $._general_type_constructor,
      $.type_variable_identifier,
      $.tuple_type,
      $.list_type,
      $.parenthesized_constructor
    ),

    tuple_type: $ => seq(
      '(',
      $._type_pattern,
      ',',
      sep1(',', $._type_pattern),
      ')'
    ),

    list_type: $ => seq(
      '[',
      $._type_pattern,
      ']'
    ),

    parenthesized_constructor: $ => seq(
      '(',
      $._type_pattern,
      ')'
    ),

    scontext: $ => seq(
      choice(
        $.simple_class,
        seq(
          '(',
          optional(sep1(',', $.simple_class)),
          ')'
        ),
      ),
      '=>'
    ),

    context: $ => prec(1, seq(
      choice(
        $.class,
        seq(
          '(',
          optional(sep1(',', $.class)),
          ')'
        ),
      ),
      '=>'
    )),

    simple_class: $ => seq(
      choice($.qualified_type_class_identifier, $.type_class_identifier),
      repeat1($.type_variable_identifier),
      optional($.parenthesized_type_variables)
    ),

    class: $ => choice(
      seq(
        choice(
          $.constructor_identifier,
          $.qualified_constructor_identifier
        ),
        $.type_variable_identifier
      ),
      seq(
        choice(
          $.constructor_identifier,
          $.qualified_constructor_identifier
        ),
        '(',
        $.type_variable_identifier,
        repeat1($._atype),
        ')'
      )
    ),

    _variable: $ => choice(
      $.variable_identifier,
      seq(
        '(',
        $.variable_operator,
        ')'
      )
    ),

    constructor_identifier: $ => $._constructor_identifier,

    type_constructor_identifier: $ => $._constructor_identifier,

    // Higher precedence here to disambiguate scontext
    type_class_identifier: $ => prec(-1, $._constructor_identifier),

    _constructor_identifier: $ => /[A-Z](\w|')*/,

    variable_identifier: $ => $._variable_identifier,

    type_variable_identifier: $ => $._variable_identifier,

    _variable_identifier: $ => /[_a-z](\w|')*/,
